<resources>
    <string name="app_name">One App Solution</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">One App Solution</string>
    <string name="nav_header_subtitle">oneapp@solution.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_quick_start">One App Solution</string>
    <string name="menu_online_apps">Online Services</string>
    <string name="menu_offline_apps">Offline Services</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc"><b>One App Solution</b> is a all in one application that responsible for helping each and every student
        with the ultimate digital experience .
         Our apps devoted to enriching student daily lives by providing offline and online service.
        This is a free app to aid the students for enhancing their digial experience.
    </string>
</resources>
