<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_onlineApps"
            android:icon="@drawable/ic_menu_online_apps"
            android:title="@string/menu_online_apps" />
        <item
            android:id="@+id/nav_offlineApps"
            android:icon="@drawable/ic_menu_offline_apps"
            android:title="@string/menu_offline_apps" />

    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
