<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_quickStart">

    <fragment
        android:id="@+id/nav_quickStart"
        android:name="com.example.oneappsolution.ui.quick_start.QuickStartFragment"
        android:label="@string/menu_quick_start"
        tools:layout="@layout/fragment_quick_start" />
    <fragment
        android:id="@+id/nav_onlineApps"
        android:name="com.example.oneappsolution.ui.online.OnlineAppsFragment"
        android:label="@string/menu_online_apps"
        tools:layout="@layout/fragment_online_apps" />

    <fragment
        android:id="@+id/nav_offlineApps"
        android:name="com.example.oneappsolution.ui.offline.OfflineAppsFragment"
        android:label="@string/menu_offline_apps"
        tools:layout="@layout/fragment_offline_apps" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.oneappsolution.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.oneappsolution.ui.logout.LogOutFragment"
        android:label="Please Login"
        tools:layout="@layout/fragment_logout" />

</navigation>